syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

  
message CreateProjectRequest {
    int32 church_id = 1;
    string project_name = 2;
    string project_description = 3;
    double target_amount = 4;
    google.protobuf.Timestamp start_date = 5;
    google.protobuf.Timestamp end_date = 6;
}

message CreateProjectResponse {
    string msg = 1;
}

message UpdateProjectRequest {
    int32 project_id = 1;
    string name = 2;
    string description = 3;
    double target_amount = 4;
    google.protobuf.Timestamp start_date = 5;
    google.protobuf.Timestamp end_date = 6;
    bool visibility = 7;
}

message UpdateProjectResponse {
    string msg = 1;
}

message MarkProjectCompletedRequest {
    int32 project_id = 1;
}

message  MarkProjectCompletedResponse{
    string msg = 1;
}

message GetChurchProjectsRequest {
    int32 church_id = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

message GetChurchProjectsResponse {
    int32 id = 1;
    int32 church_id = 2;
    string name = 3;
    string description = 4;
    double target_amount = 5;
    double donated_amount = 6;
    google.protobuf.Timestamp start_date = 7;
    google.protobuf.Timestamp end_date = 8;
    bool visibility = 9;
    bool completed = 10;
  }

message GetProjectDetailsRequest {
    int32 project_id = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

message ChurchProject {
    int32 id = 1;
    int32 church_id = 2;
    string name = 3;
    string description = 4;
    double target_amount = 5;
    double donated_amount = 6;
    google.protobuf.Timestamp start_date = 7;
    google.protobuf.Timestamp end_date = 8;
    bool visibility = 9;
    bool completed = 10;
    // repeated ProjectContributor contributors = 11;
  }
  

message ProjectContributor {
    string user_id = 1;
    double total_donation = 2;
    // google.protobuf.Timestamp donated_at = 3;
}


message ProjectDonationRequest {
    int32 project_id = 1;
    string user_id = 2;
    double amount = 3;
}

message ProjectDonateResponse {
    string msg = 1;
}
  